fix: remove document

--- a/plugins/link-icon/i18n/en_US.json
+++ b/plugins/link-icon/i18n/en_US.json
@@ -6,5 +6,7 @@
     "InputDocLink": {
         "title": "Insert doc link icon",
         "description": "Insert icon before a document link [](siyuan://)"
-    }
+    },
+    "upload": "Upload Custom Icon",
+    "manage": "Manage Custom Icons"
 }
